# pgen-rs

./: Cargo.toml  README.md  notes.txt
src/: cmd.rs  lib.rs  main.rs  render.rs  template.rs
src/cmd/: fd.rs  gen.rs
tests/: defs.yaml  templ.yaml  to_yaml.yaml
tests/from-yaml/include/fruit/: fruit.hpp
tests/from-yaml/src/: main.cpp
tests/templ-dir/include/{@ project_name @}/: {project_name}.hpp
tests/templ-dir/src/: main.cpp
