[package]
name = "pgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
fancy-regex = "0.13.0"
leon = "2.0.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
thiserror = "1.0.56"
walkdir = "2.4.0"

[dev-dependencies]
serde_json = "1.0.113"
